--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": ">=4.3.2"
   },
   "dependencies": {
+    "async": "^2.1.4",
     "buffer-shims": "^1.0.0",
     "curve25519-n": "^1.1.0",
     "debug": "^2.2.0",
@@ -14,7 +15,10 @@
     "fast-srp-hap": "^1.0.0",
     "ip": "^1.1.3",
     "mdns": "^2.3.2",
-    "node-persist": "^0.0.8"
+    "node-persist": "^0.0.8",
+    "ping": "^0.2.1",
+    "sync": "^0.2.5",
+    "wol": "^1.0.3"
   },
   "devDependencies": {
     "simple-plist": "0.0.4"
