--- a/config.ex.json
+++ b/config.ex.json
@@ -6,6 +6,7 @@
       "ip": "192.168.0.4",
       "mac": "71:AD:1F:31:7E:12",
       "password": "031-45-154",
+      "secret": "YourSecret",
       "allowShutdown": true
     }
   ]
