--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "ed25519": "^0.0.4",
     "fast-srp-hap": "^1.0.0",
     "ip": "^1.1.3",
+    "jsonwebtoken": "^7.2.1",
     "mdns": "^2.3.2",
     "node-persist": "^0.0.8",
     "ping": "^0.2.1",
+    "request": "^2.79.0",
     "sync": "^0.2.5",
     "wol": "^1.0.3"
   },
